--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "hardware/Optiboot"]
 	path = hardware/Optiboot
 	url = https://github.com/Optiboot/optiboot.git
+[submodule "libraries/MemoryFree"]
+	path = libraries/MemoryFree
+	url = git@github.com:maniacbug/MemoryFree.git
